Se modificaron algunos metodos de los controllers
Se modificaron métodos de TransactioController, especificamente de signUp y signIn

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ cors=*
 
 // MYSQL
 host=localhost
-database=alkemyChallenge
-username=root
-password=''
+database=depor93_alkemyChallenge
+username=depor93_melof10
+password=BOCACAMPEON
 dialect=mysql
