Se modificaron ciertos ficheros
Se modificaron valores de variables de config para que el proyecto pueda funcionar
en producción y además se resolvió el error para ciertas peticiones de Transaction

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ port=3000
 cors=*
 
 // MYSQL
-host=localhost
-database=depor93_alkemyChallenge
-username=depor93_melof10
-password=BOCACAMPEON
+host=us-cdbr-east-03.cleardb.com
+database=heroku_090c457dbf44721
+username=b73b5a6663d11e
+password=8989c1eb
 dialect=mysql
